[package]
name = "dream"
edition = "2021"
version = "0.2.0"
authors = ["thrizzle. <thrizzle@terabyteis.me>"]
categories = []

[dependencies]
actix-web = "4.0.0-rc.2"
cached = "0.30.0"
env_logger = "0.9.0"
json = "0.12.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_derive = "1.0.152"
rand = "0.8.5"

[dependencies.reqwest]
version = "0.11"
features = ["json"]
optional = false


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[target.x86_64-unknown-linux-musl]
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold", "-Zshare-generics=y"]
